# House_price_prediction

./: Dockerfile  README.md  app.py  elasticnet_model.pkl  load_data.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
templates/: home.html
