[project]
name = "house-price-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Zainab Manzoor",email = "zainabmanzoorzoor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
